@@ -615,3 +615,11 @@ void CGUIListControlEx::SetHeight(int iHeight)
   m_upDown.SetRange(1, 1);
   m_upDown.SetValue(1);
 }
+
+
+void CGUIListControlEx::SetPulseOnSelect(bool pulse)
+{
+  m_imgButton.SetPulseOnSelect(pulse);
+  m_upDown.SetPulseOnSelect(pulse);
+  CGUIControl::SetPulseOnSelect(pulse);
+}
